--- a/TexTest/src/env_template.tex
+++ b/TexTest/src/env_template.tex
@@ -31,3 +31,8 @@
         \end{tabular}
         \end{center}
     }
+
+% Chapter title format
+\titleformat{\chapter}
+{\normalfont\Large\bfseries}{\thechapter}{1em}{}
+\titlespacing*{\chapter} {0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .2ex}
