--- a/TexTest/src/utils.tex
+++ b/TexTest/src/utils.tex
@@ -5,6 +5,8 @@
 \usepackage{blindtext}
 \usepackage{underscore} % So underscores don't have to escaped in text mode
 \usepackage[toc,page]{appendix}
+\usepackage[acronym]{glossaries}
+\usepackage{longtable}
 
 \newcounter{currentlevel}
 \newcounter{nextlevel}
