--- a/demo/project1/latex/env_template.tex
+++ b/demo/project1/latex/env_template.tex
@@ -2,13 +2,15 @@
 %! Date = 11-Sep-21
 
 % Packages
-\usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{xparse}
+\usepackage{xcolor}
 
 \graphicspath{ {./media/} }
 
 % Hyperlinks in tables of content, figures, tables...
-\hypersetup{
+\hypersetup
+{
     colorlinks,
     citecolor=black,
     filecolor=black,
@@ -17,11 +19,20 @@
     linktoc=all,
 }
 
-\newenvironment{requirement}[1]
+% Environment for requirements
+\NewDocumentEnvironment{requirement}{m o}
     {
+        \vspace{0.05cm}
         \begin{flushleft}
-            #1
+            \textbf{\large Requirement [#1] } \label{#1}
+            \IfValueTF{#2} % If optionnal argument is passed
+            {
+                \hfill
+                Validation strategy: #2
+            }
+            { } % No optional argument : print nothing
         \end{flushleft}
+        \vspace{0.05cm}
         \begin{center}
         \begin{tabular}{|p{0.9\textwidth}|}
         \hline\\
@@ -30,9 +41,19 @@
         \\\\\hline
         \end{tabular}
         \end{center}
+        \vspace{1cm}
     }
+
+% Environment for authors / reviewers / etc. table on first page
+\newenvironment{authors}
+{} {}
 
 % Chapter title format
 \titleformat{\chapter}
 {\normalfont\Large\bfseries}{\thechapter}{1em}{}
 \titlespacing*{\chapter} {0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .2ex}
+
+% Fonts
+\renewcommand{\rmdefault}{phv} % Arial
+\renewcommand{\sfdefault}{phv} % Arial
+
