More refactoring, added LaTeX builder in Python

--- a/demo/project1/latex/utils.tex
+++ b/demo/project1/latex/utils.tex
@@ -2,6 +2,8 @@
 %! Date = 11-Sep-21
 
 % Packages
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{blindtext}
 \usepackage{hyperref}
 \usepackage{underscore} % So underscores don't have to escaped in text mode
