--- a/demo/project1/latex/utils.tex
+++ b/demo/project1/latex/utils.tex
@@ -6,6 +6,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{blindtext}
 \usepackage{hyperref}
+\usepackage[a-1b]{pdfx}
 \usepackage{underscore} % So underscores don't have to escaped in text mode
 \usepackage[toc,page]{appendix}
 \usepackage[acronym,hyperfirst=false]{glossaries}
