--- a/demo/project1/latex/main.tex
+++ b/demo/project1/latex/main.tex
@@ -3,7 +3,7 @@
 
 % Preamble
 \documentclass[a4paper]{report}
-\usepackage[a4paper, head=43pt, margin=0.9in]{geometry}
+\usepackage[a4paper, head=37pt, margin=82pt]{geometry}
 
 % Generated constants
 \input{snip/constants}
